--- a/upwork-exs.cabal
+++ b/upwork-exs.cabal
@@ -28,12 +28,14 @@ source-repository head
 library
   exposed-modules:
       Lib
+      Blocks
   other-modules:
       Paths_upwork_exs
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+      ,  bytestring, cryptohash-sha256
   default-language: Haskell2010
 
 executable upwork-exs-exe
@@ -48,7 +50,7 @@ executable upwork-exs-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , upwork-exs , random, network, bytestring
+    , upwork-exs , random, network, bytestring, cryptohash-sha256, aeson
   default-language: Haskell2010
 
 test-suite upwork-exs-test
