--- a/upwork-exs.cabal
+++ b/upwork-exs.cabal
@@ -46,13 +46,13 @@ executable upwork-exs-exe
       CaesarCipher
       EchoClient
       EchoServer
-      Paths_upwork_exs
+      ServerBlockchain
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , upwork-exs , random, network, bytestring, cryptohash-sha256, aeson
+    , upwork-exs , random, network, bytestring, cryptohash-sha256, aeson, scotty, HTTP, mtl, base, text
   default-language: Haskell2010
 
 test-suite upwork-exs-test
